--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>test</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="./dist/bundle.js"></script>
+    <script type="module" src="./dist/main.js"></script>
   </head>
   <body>
     <header>
