--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>test</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
     <script type="module" src="./dist/main.js"></script>
   </head>
   <body>
