browser friendly index.js (may rename)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>test</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
-    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/index.js"></script>
   </head>
   <body>
     <header>
@@ -13,7 +13,7 @@
     <div id="submain"></div>
     <main>
       <div id="st"><p>I felt like there should be a paragraph tag.</p></div>
-      <svg id="hg" xmlns="http://www.w3.org/2000/svg"></svg>
+      <div id="hg"></div>
       <form id="params" method="get">
         <fieldset>
           <legend>Map properties</legend>
