I honestly lost track

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
           <input
             type="radio"
             id="hex"
-            value="hex"
+            value="Hexagon"
             name="shape"
             checked="checked"
           />
           <label for="hex">Hexagon</label>
 
-          <input type="radio" id="tri" value="tri" name="shape" />
+          <input type="radio" id="tri" value="Triangle" name="shape" />
           <label for="tri">Triangle</label>
 
-          <input type="radio" id="star" value="star" name="shape" />
+          <input type="radio" id="star" value="Star" name="shape" />
           <label for="star">Star</label>
 
-          <input type="radio" id="para" value="para" name="shape" />
+          <input type="radio" id="para" value="Parallelogram" name="shape" />
           <label for="para">Parallelogram</label>
           <!--
           <input type="radio" id="rect" value="rect" name="shape" />
