--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>test</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
-    <script type="module" src="./dist/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </head>
   <body>
     <header>
