now I can do some visual testing

--- a/index.html
+++ b/index.html
@@ -25,26 +25,24 @@
             checked="checked"
           />
           <label for="hex">Hexagon</label>
-
           <input type="radio" id="tri" value="Triangle" name="shape" />
           <label for="tri">Triangle</label>
-
           <input type="radio" id="star" value="Star" name="shape" />
           <label for="star">Star</label>
-
           <input type="radio" id="para" value="Parallelogram" name="shape" />
           <label for="para">Parallelogram</label>
-          <!--
+<!--
           <input type="radio" id="rect" value="rect" name="shape" />
-          <label for="rect">Rectangle</label>-->
+          <label for="rect">Rectangle</label>
+-->
           <br />
 
           <label for="gs1">Size</label>
           <input type="number" name="gs1" id="gs1" min="0" step="1" value="5" />
-          <!--
+<!--
           <label for="gs2">Size 2:</label>
           <input type="number" name="gs2" id="gs2" min="0" step="1" value="5" />
-          -->
+-->
           <label for="order">Order of coordinates:</label>
           <input
             type="number"
@@ -68,13 +66,10 @@
             max="24"
             step="0.1"
           />
-
           <label for="hsx">Hex Width</label>
           <input type="number" name="hsx" id="hsx" step="1" value="25" />
-
           <label for="hsy">Hex Height</label>
           <input type="number" name="hsy" id="hsy" step="1" value="25" /><br />
-
           <label for="orx">Origin X</label>
           <input
             type="number"
@@ -84,7 +79,6 @@
             step="1"
             value="250"
           />
-
           <label for="ory">Origin Y</label>
           <input
             type="number"
@@ -106,7 +100,6 @@
             step="1"
             value="500"
           />
-
           <label for="csy">Canvas Height</label>
           <input
             type="number"
@@ -116,9 +109,10 @@
             step="1"
             value="500"
           />
-
+<!--
           <input type="checkbox" name="dbug" id="dbug" />
           <label for="dbug">Debug</label>
+-->
         </fieldset>
       </form>
     </main>
