--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <script type="module" src="./js/main.js"></script>
   </head>
   <body>
-    <header>
+    <header><nav>
       <a href="./index.html">Main</a>
-    </header>
+      <a href="./docs/index.html">API reference</a>
+    </nav></header>
     <div id="submain"></div>
     <main>
       <div id="st"><p>I felt like there should be a paragraph tag.</p></div>
@@ -115,10 +116,6 @@
             step="1"
             value="500"
           />
-<!--
-          <input type="checkbox" name="dbug" id="dbug" />
-          <label for="dbug">Debug</label>
--->
         </fieldset>
       </form>
     </main>
