--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <td></td>
             </tr>
             <tr>
-              <td><label for="gs2">Size 2:</label></td>
+              <td><label for="gs2">Size 2</label></td>
               <td>
                 <input
                   type="number"
@@ -87,7 +87,7 @@
                 />
               </td>
               <td class="note">
-                * only applies to Parallelogram and Rectangle
+                only applies to Parallelogram and Rectangle
               </td>
             </tr>
           </table>
@@ -114,7 +114,7 @@
             min="0"
             max="24"
             step="0.1"
-          />
+          /> * π/12 radians
           <table>
             <tr>
               <td><label for="hsx">Hex Width</label></td>
