--- a/index.html
+++ b/index.html
@@ -150,6 +150,28 @@
                 />
               </td>
             </tr>
+            <tr>
+              <td><label for="shx">Shear X</label></td>
+              <td>
+                <input
+                  type="number"
+                  name="shx"
+                  id="shx"
+                  step="0.01"
+                  value="0"
+                />
+              </td>
+              <td><label for="shy">Shear Y</label></td>
+              <td>
+                <input
+                  type="number"
+                  name="shy"
+                  id="shy"
+                  step="0.01"
+                  value="0"
+                />
+              </td>
+            </tr>
           </table>
         </fieldset>
         <fieldset>
