apparently it was mostly caught up with svg?

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
       <div id="st"><p>I felt like there should be a paragraph tag.</p></div>
       <div id="shapes"></div>
-      <div id="hg"></div>
+      <div id="svghg"></div>
       <form id="params" method="get">
         <fieldset>
           <legend>Map properties</legend>
@@ -196,6 +196,7 @@
           />
         </fieldset>
       </form>
+      <div id="canvhg"></div>
     </main>
   </body>
 </html>
