--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     </header>
     <main>
       <div id="st"><p>I felt like there should be a paragraph tag.</p></div>
-      <div id="shapes"></div>
-      <div id="hg"></div>
+      <div id="canvhg"></div>
       <form id="params" method="get">
         <fieldset>
           <legend>Map properties</legend>
@@ -91,17 +90,6 @@
               </td>
             </tr>
           </table>
-          <!--
-          <label for="order">Order of coordinates:</label>
-          <input
-            type="number"
-            name="order"
-            id="order"
-            min="0"
-            max="5"
-            step="1"
-            value="0"
-          />-->
         </fieldset>
         <fieldset>
           <legend>Layout properties</legend>
@@ -196,6 +184,8 @@
           />
         </fieldset>
       </form>
+      <div id="shapes"></div>
+      <div id="svghg"></div>
     </main>
   </body>
 </html>
