I am once again asking for main to run

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                   value="5"
                 />
               </td>
-              <td class="note">
-                only applies to Parallelogram and Rectangle
-              </td>
+              <td class="note">only applies to Parallelogram and Rectangle</td>
             </tr>
           </table>
         </fieldset>
@@ -103,16 +101,17 @@
             min="0"
             max="24"
             step="0.1"
-          /> * π/12 radians
+          />
+          * π/12 radians
           <table>
             <tr>
               <td><label for="hsx">Hex Width</label></td>
               <td>
-                <input type="number" name="hsx" id="hsx" step="1" value="25" />
+                <input type="number" name="hsx" id="hsx" step="1" value="36" />
               </td>
               <td><label for="hsy">Hex Height</label></td>
               <td>
-                <input type="number" name="hsy" id="hsy" step="1" value="25" />
+                <input type="number" name="hsy" id="hsy" step="1" value="36" />
               </td>
             </tr>
             <tr>
@@ -124,7 +123,7 @@
                   id="orx"
                   min="1"
                   step="1"
-                  value="250"
+                  value="360"
                 />
               </td>
               <td><label for="ory">Origin Y</label></td>
@@ -135,7 +134,7 @@
                   id="ory"
                   min="1"
                   step="1"
-                  value="250"
+                  value="360"
                 />
               </td>
             </tr>
@@ -172,7 +171,7 @@
             id="csx"
             min="1"
             step="1"
-            value="500"
+            value="720"
           />
           <label for="csy">Canvas Height</label>
           <input
@@ -181,7 +180,7 @@
             id="csy"
             min="1"
             step="1"
-            value="500"
+            value="720"
           />
         </fieldset>
       </form>
