Now we can see both coordinate versions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
     <main>
-      <div id="st"><p>I felt like there should be a paragraph tag.</p></div>
+      <div id="st">let's<br />reduce<br />shift</div>
       <div id="shapes"></div>
       <div id="svghg"></div>
       <form id="params" method="get">
@@ -69,21 +69,21 @@
             <tr>
               <td><label for="hsx">Hex Width</label></td>
               <td>
-                <input type="number" name="hsx" id="hsx" step="1" value="100" />
+                <input type="number" name="hsx" id="hsx" step="1" value="200" />
               </td>
               <td><label for="hsy">Hex Height</label></td>
               <td>
-                <input type="number" name="hsy" id="hsy" step="1" value="100" />
+                <input type="number" name="hsy" id="hsy" step="1" value="200" />
               </td>
             </tr>
             <tr>
               <td><label for="orx">Origin X</label></td>
               <td>
-                <input type="number" name="orx" id="orx" min="1" step="1" value="500" />
+                <input type="number" name="orx" id="orx" min="1" step="1" value="1000" />
               </td>
               <td><label for="ory">Origin Y</label></td>
               <td>
-                <input type="number" name="ory" id="ory" min="1" step="1" value="500" />
+                <input type="number" name="ory" id="ory" min="1" step="1" value="1000" />
               </td>
             </tr>
             <tr>
@@ -101,9 +101,9 @@
         <fieldset>
           <legend>Canvas properties</legend>
           <label for="csx">Canvas Width</label>
-          <input type="number" name="csx" id="csx" min="1" step="1" value="1000" />
+          <input type="number" name="csx" id="csx" min="1" step="1" value="2000" />
           <label for="csy">Canvas Height</label>
-          <input type="number" name="csy" id="csy" min="1" step="1" value="1000" />
+          <input type="number" name="csy" id="csy" min="1" step="1" value="2000" />
         </fieldset>
       </form>
       <div id="canvhg"></div>
