--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header>
       <nav>
         <a href="./index.html">Main</a>
-        <a href="./docs/index.html">API reference</a>
+        <a href="#"><!--./docs/index.html--><s>API reference</s></a>
+        <a href="https://github.com/hiimmrdave/hexgraph">repository</a>
       </nav>
     </header>
     <main>
