turn coordinates on and off

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
           <input type="number" name="csx" id="csx" min="1" step="1" value="2000" />
           <label for="csy">Canvas Height</label>
           <input type="number" name="csy" id="csy" min="1" step="1" value="2000" />
+          <label for="debug">Show node coordinates</label>
+          <input type="checkbox" name="debug" id="debug" checked />
         </fieldset>
       </form>
       <div id="canvhg"></div>
