--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>test</title>
@@ -40,7 +40,7 @@
             <tr>
               <td><label for="gs1">Size</label></td>
               <td>
-                <input type="number" name="gs1" id="gs1" min="0" step="1" value="3" />
+                <input type="number" name="gs1" id="gs1" min="0" step="1" value="6" />
               </td>
               <td></td>
             </tr>
@@ -70,11 +70,11 @@
             <tr>
               <td><label for="hsx">Hex Width</label></td>
               <td>
-                <input type="number" name="hsx" id="hsx" step="1" value="200" />
+                <input type="number" name="hsx" id="hsx" step="1" value="100" />
               </td>
               <td><label for="hsy">Hex Height</label></td>
               <td>
-                <input type="number" name="hsy" id="hsy" step="1" value="200" />
+                <input type="number" name="hsy" id="hsy" step="1" value="100" />
               </td>
             </tr>
             <tr>
